--- a/src/Filter/Date/styles.scss
+++ b/src/Filter/Date/styles.scss
@@ -3,7 +3,15 @@
     display: grid;
     grid-template-columns: auto var(--size-clear);
     width: max-content;
+    max-width: 100%;
     gap: 0.25rem;
+    &-text-value{
+        text-overflow: ellipsis;
+        max-width: 100%;
+        overflow: hidden;
+        white-space: nowrap;
+        display: block;
+    }
     &-dropdown-body {
         .fenext-input-calendar {
             --size-cell: 2.2rem;
