--- a/styles/index.css
+++ b/styles/index.css
@@ -4119,7 +4119,12 @@ body:not(:has(.fenext-layout-grid-mt-menu-top)) .fenext-input-google-autocomplet
   background-color: var(--fenext-color-light);
   color: var(--fenext-color-dark);
   border-radius: 0.75rem;
+  max-width: 100%;
+  overflow: hidden;
   --icon-rotate: 0deg;
+}
+.fenext-dropdown-header-content {
+  max-width: 100%;
 }
 .fenext-dropdown-header-icon {
   width: 1rem;
@@ -6370,7 +6375,15 @@ body:has(.fenext-input-radio-input-id-fenext-swich-view-fenext-swich-view-select
   display: grid;
   grid-template-columns: auto var(--size-clear);
   width: max-content;
+  max-width: 100%;
   gap: 0.25rem;
+}
+.fenext-filter-date-text-value {
+  text-overflow: ellipsis;
+  max-width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  display: block;
 }
 .fenext-filter-date-dropdown-body .fenext-input-calendar {
   --size-cell: 2.2rem;
